[package]
name = "ray-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ray_tracer"
path = "src/ray_tracer/lib.rs"

[[bin]]
name = "ray_tracer"
path = "src/bin/main.rs"

[dependencies]
rand = "*"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3